# openvm

./: .codespellignore  .gitignore  .gitmodules  1810_hit  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  VERSIONING.md  _client-eth-metrics-aot.json  _client-eth-metrics-tco.json  _client-eth-metrics-vanilla.json  _coremark-metrics-aot.json  _coremark-metrics-tco.json  _coremark-metrics-vanilla.json  blake3_metrics.json  config-1b.toml  config.toml  context.md  coremark-openvm.vmexe  debug.txt  execute-metrics.sh  hahaha.txt  i256-example.app.proof  index.md  keccak-example.app.proof  keccak-example.stark.proof  make_1b_tree.sh  output.txt  plan-cuda-deferral.md  plan-cuda-keccak256.md  plan-cuda-load-sign-extend.md  plan-cuda-loadstore.md  result.txt  rust-analyzer.toml  rust-toolchain  (+8 more)
benchmark/: Cargo.toml  README.md
benchmark/benches/: permutation_trace_gen.rs  quotient_poly.rs  single_rw.rs  single_rw_trace_gen.rs  xor_bits.rs
benchmark/benchmark/tmp/: _result.md
benchmark/config/: config.toml
benchmark/config/rw-mini/: BabyBearPoseidon2_32x1024x256-256-16_2-103-0.toml  BabyBearPoseidon2_32x1024x256-256-16_3-65-0.toml  BabyBearPoseidon2_32x1024x256-256-16_3-80-0.toml  BabyBearPoseidon2_32x1024x256-256-16_4-45-0.toml  BabyBearPoseidon2_32x1024x256-256-16_4-57-0.toml  BabyBearPoseidon2_32x1024x64-64-16_2-103-0.toml  BabyBearPoseidon2_32x1024x64-64-16_3-65-0.toml  BabyBearPoseidon2_32x1024x64-64-16_3-80-0.toml  BabyBearPoseidon2_32x1024x64-64-16_4-45-0.toml  BabyBearPoseidon2_32x1024x64-64-16_4-57-0.toml  (+10 more)
benchmark/output/: 20240709-004812.csv  20240711-170422.csv  20240711-173521.csv  20240711-175039.csv  20240711-175133.csv  20240712-030909.csv  Predicate-20240719-102551.csv  ReadWrite-20240719-102437.csv  output.csv
benchmark/src/: lib.rs  main.rs
benchmarks/: Cargo.toml  README.md  ecrecover-01a6d5d3de2b2153a22cb2d2c90a80d605ea864c.md  ecrecover-01de4ffbd20662723a9f9dad727c2bd56f8151d5.md  ecrecover-026fe5599bbc143adf4a00741b39f30a8e56af8f.md  ecrecover-02930de938e75f4ff862929cf9ea66f3511e807e.md  ecrecover-02d5a13556b167ccae0c3b817f612adf26d92fda.md  ecrecover-03af15d630b7cf8feb3b4be8d15bea0ad34ffb21.md  ecrecover-03c1b75499e6e21b33207eacf9f4aaa5ed69a198.md  ecrecover-04a59a6f13bc74ee17019585404adfb7acd5e6fc.md  ecrecover-059d5c59ce00be393653cc5b63eb15314c69a43d.md  ecrecover-05cb6a11bbd7ac3ac8a00c3fc56391b06f54baa2.md  ecrecover-0630785f5c56f9a973d34f5ebcab44f01a0ed79d.md  ecrecover-065835b29da6707ce7bad515eeeb4b466935e4a1.md  ecrecover-06a568e1f6eab928e546c933f1c749ad9bea235a.md  ecrecover-07a2e1074b68a81e9b08b9beaaad6414dec4935d.md  ecrecover-07bd2b7d27cb6fbf41d5a009e06ea10dd99f8624.md  ecrecover-0851041f61fd055ec7665f0e06bf65f0cd5295d3.md  ecrecover-08b2010c7e3475bb36b8f062801cc012850c6a4d.md  ecrecover-08bbf79368b07437271aeacb25fb8857980ca863.md  ecrecover-08db261c1db97886291c45dcd177b902db6d8626.md  ecrecover-093bff2e2d51bc6a9a007cda3dfc7c614ff1d6c7.md  ecrecover-09bebcc3b1ddd69be18db9a55fa1a6c2d889ce43.md  ecrecover-0a77e956d6f7c086db3be99e713c06c83533a11c.md  ecrecover-0a9f7c528f84a0c6b657a190eea82d1422f768b6.md  ecrecover-0af2248c57b689e91320026e9dfe73b0ca4a92b5.md  ecrecover-0c0d329650b7e11b6b813cf10b433dae861217fb.md  ecrecover-0c53542684351dac51bcf11ecbd2368304db832f.md  ecrecover-0d0897088bcbd0c89cbc96820ea9b1ad6c00a3a2.md  ecrecover-0eb08d44fbf73bb2adc62c095bb0054708fefe22.md  ecrecover-0f1b5fc25c3415f882135080b96bbe8666ecea44.md  ecrecover-0f1d62e6d596271b6aef81d5c315cc0e2c34d0d7.md  ecrecover-0f644600c21cc2a8b2a359ddad90a5670b11e866.md  ecrecover-0f94c8a3dfa7536c1231465d1bdee5fc607a5993.md  ecrecover-1037f75cd2054f5fd30a038d21f7abb9a66d5810.md  ecrecover-10acf911aed55da6684d53f154d4a87ecd600950.md  ecrecover-10c65330a9c0932a7544b6f99453ea6d974616bc.md  ecrecover-10da09a33baf89fb6e757d79ff37aed883c4c314.md  ecrecover-10da833195a674eca78149c313ff6cf60d180e75.md  ecrecover-11bad01a7f5ae70ac8e993d9cfbd4952acf01f72.md  (+2103 more)
benchmarks/benches/: fibonacci_execute.rs  regex_execute.rs
benchmarks/e2e/: Cargo.toml
benchmarks/examples/: regex-elf  regex_execute.rs
benchmarks/execute/: Cargo.toml
benchmarks/guest/: Cargo.toml
benchmarks/programs/: Cargo.toml
benchmarks/prove/: Cargo.toml
benchmarks/src/: utils.rs
benchmarks/utils/: Cargo.toml
compiler/: Cargo.toml
compiler/examples/: fibonacci.rs
compiler/src/: config.rs  lib.rs  util.rs
compiler/tests/: arithmetic.rs  array.rs  conditionals.rs  cycle_tracker.rs  ec_add.rs  ext.rs  for_loops.rs  hint.rs  io.rs  keccak256.rs  lt.rs  modular_arithmetic.rs  poseidon2.rs  ptr_struct.rs  public_values.rs  uint.rs
crates/cli/: Cargo.toml  README.md  build.rs  fibonacci.app.proof  fibonacci.stark.proof
crates/continuations/: Cargo.toml  README.md
crates/continuations-v2/: Cargo.toml  README.md  build.rs
crates/execution-profile/: Cargo.toml
crates/prof/: Cargo.toml
crates/prometheus-metrics/: Cargo.toml  README.md
crates/recursion/: Cargo.toml  README.md  build.rs
crates/sdk/: Cargo.toml  docker-compose.yml
crates/sdk-config/: Cargo.toml
crates/sdk-v2/: Cargo.toml
crates/static-verifier/: Cargo.toml
crates/to_rocq/: Cargo.toml  README.md
crates/verify/: Cargo.toml  README.md  reth.vm.vk
crates/verify-stark/: Cargo.toml  README.md  reth.vm.vk
crates/vm/: Cargo.toml  aot_asm.s  build.rs  rust_function.rs
datafusion-interface/: Cargo.toml
datafusion-interface/src/: lib.rs
datafusion-interface/tests/: basic_e2e.rs
examples/algebra/: Cargo.toml  openvm.toml
examples/ecc/: Cargo.toml  openvm.toml  openvm_init.rs
examples/ecdsa/: Cargo.toml  openvm.toml
gunadi_dev/: Cargo.toml
gunadi_dev/asm_bridge/: Cargo.toml
gunadi_dev/src/: main.rs
logical-interface/: Cargo.toml
logical-interface/src/: bytes.rs  lib.rs  types.rs  utils.rs
logical-interface/tests/: afs_interface.rs  test_input_file.afi
tracegen-gpu/: Cargo.toml  build.rs
tracegen-gpu/src/: lib.rs  utils.rs
tracegen-gpu/tests/: range_tuple_test.rs  subair.rs  var_range_test.rs
transpiler/: Cargo.toml
transpiler/src/: elf.rs
(+30019 files in other folders)
