[workspace.package]
version = "2.0.1"
edition = "2021"
rust-version = "1.91.1"
authors = ["OpenVM Authors"]
homepage = "https://openvm.dev"
repository = "https://github.com/openvm-org/"
license = "MIT OR Apache-2.0"

[workspace]
members = [
  "benchmarks/utils",
  "benchmarks/execute",
  "benchmarks/prove",
  "crates/prof",
  "crates/cli",
  "crates/sdk",
  "crates/sdk-config",
  "crates/circuits/mod-builder",
  "crates/circuits/poseidon2-air",
  "crates/circuits/primitives",
  "crates/circuits/primitives/derive",
  "crates/toolchain/transpiler",
  "crates/toolchain/openvm",
  "crates/toolchain/build",
  "crates/toolchain/instructions",
  "crates/toolchain/instructions/derive",
  "crates/toolchain/macros",
  "crates/toolchain/platform",
  "crates/toolchain/tests",
  "crates/continuations",
  "crates/recursion",
  "crates/verify",
  "crates/vm",
  "extensions/rv32im/circuit",
  "extensions/rv32im/transpiler",
  "extensions/rv32im/guest",
  "extensions/rv32im/tests",
  "extensions/rv32-adapters",
  "extensions/algebra/circuit",
  "extensions/algebra/transpiler",
  "extensions/algebra/guest",
  "extensions/algebra/moduli-macros",
  "extensions/algebra/complex-macros",
  "extensions/algebra/tests",
  "extensions/bigint/circuit",
  "extensions/bigint/transpiler",
  "extensions/bigint/guest",
  "extensions/deferral/circuit",
  "extensions/deferral/guest",
  "extensions/deferral/transpiler",
  "extensions/deferral/tests",
  "extensions/keccak256/circuit",
  "extensions/keccak256/transpiler",
  "extensions/keccak256/guest",
  "extensions/sha2/circuit",
  "extensions/sha2/transpiler",
  "extensions/sha2/guest",
  "extensions/ecc/circuit",
  "extensions/ecc/transpiler",
  "extensions/ecc/guest",
  "extensions/ecc/sw-macros",
  "extensions/ecc/tests",
  "extensions/pairing/circuit",
  "extensions/pairing/guest",
  "guest-libs/ff_derive/",
  "guest-libs/k256/",
  "guest-libs/p256/",
  "guest-libs/keccak256/",
  "guest-libs/pairing/",
  "guest-libs/sha2/",
  "guest-libs/verify-stark/circuit",
  "guest-libs/verify-stark/guest",
  "crates/static-verifier",
  "scripts",
]
exclude = ["crates/sdk/example", "benchmarks/guest/**"]
resolver = "2"

# Fastest runtime configuration
[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
debug-assertions = false
strip = false

# Make sure debug symbols are in the bench profile for flamegraphs
[profile.bench]
inherits = "profiling"

# This will compile slowly
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
debug = 2

# For O1 optimization but still fast(ish) compile times
[profile.fast]
inherits = "dev"
debug-assertions = true
# better recompile times
incremental = true
lto = "thin"

[workspace.dependencies]
# Stark Backend
openvm-stark-backend = { version = "2.0.0", git = "https://github.com/openvm-org/stark-backend.git", branch = "main", default-features = false }
openvm-stark-sdk = { version = "2.0.0", git = "https://github.com/openvm-org/stark-backend.git", branch = "main", default-features = false }
openvm-cpu-backend = { version = "2.0.0", git = "https://github.com/openvm-org/stark-backend.git", branch = "main", default-features = false }
openvm-cuda-backend = { version = "2.0.0", git = "https://github.com/openvm-org/stark-backend.git", branch = "main", default-features = false }
openvm-cuda-builder = { version = "2.0.0", git = "https://github.com/openvm-org/stark-backend.git", branch = "main", default-features = false }
openvm-cuda-common = { version = "2.0.0", git = "https://github.com/openvm-org/stark-backend.git", branch = "main", default-features = false }

# OpenVM
openvm-mod-circuit-builder = { version = "2.0.1", path = "crates/circuits/mod-builder", default-features = false }
openvm-poseidon2-air = { version = "2.0.1", path = "crates/circuits/poseidon2-air", default-features = false }
openvm-sha2-air = { version = "2.0.1", path = "crates/circuits/sha2-air", default-features = false }
openvm-circuit-primitives = { version = "2.0.1", path = "crates/circuits/primitives", default-features = false }
openvm-circuit-primitives-derive = { version = "2.0.1", path = "crates/circuits/primitives/derive", default-features = false }
openvm = { version = "2.0.1", path = "crates/toolchain/openvm", default-features = false }
openvm-build = { version = "2.0.1", path = "crates/toolchain/build", default-features = false }
openvm-instructions = { version = "2.0.1", path = "crates/toolchain/instructions", default-features = false }
openvm-instructions-derive = { version = "2.0.1", path = "crates/toolchain/instructions/derive", default-features = false }
openvm-macros-common = { version = "2.0.1", path = "crates/toolchain/macros", default-features = false }
openvm-platform = { version = "2.0.1", path = "crates/toolchain/platform", default-features = false }
openvm-transpiler = { version = "2.0.1", path = "crates/toolchain/transpiler", default-features = false }
openvm-custom-insn = { version = "2.0.1", path = "crates/toolchain/custom_insn", default-features = false }
openvm-circuit = { version = "2.0.1", path = "crates/vm", default-features = false }
openvm-circuit-derive = { version = "2.0.1", path = "crates/vm/derive", default-features = false }
openvm-recursion-circuit = { version = "2.0.1", path = "crates/recursion", default-features = false }
openvm-recursion-circuit-derive = { version = "2.0.1", path = "crates/recursion/derive", default-features = false }
openvm-continuations = { version = "2.0.1", path = "crates/continuations", default-features = false }
openvm-verify-stark-host = { version = "2.0.1", path = "crates/verify", default-features = false }
openvm-static-verifier = { version = "2.0.1", path = "crates/static-verifier", default-features = false }
openvm-sdk = { version = "2.0.1", path = "crates/sdk", default-features = false }
openvm-sdk-config = { version = "2.0.1", path = "crates/sdk-config", default-features = false }
cargo-openvm = { version = "2.0.1", path = "crates/cli", default-features = false }

# Extensions
openvm-rv32im-circuit = { version = "2.0.1", path = "extensions/rv32im/circuit", default-features = false }
openvm-rv32im-transpiler = { version = "2.0.1", path = "extensions/rv32im/transpiler", default-features = false }
openvm-rv32im-guest = { version = "2.0.1", path = "extensions/rv32im/guest", default-features = false }
openvm-rv32-adapters = { version = "2.0.1", path = "extensions/rv32-adapters", default-features = false }
openvm-keccak256-circuit = { version = "2.0.1", path = "extensions/keccak256/circuit", default-features = false }
openvm-keccak256-transpiler = { version = "2.0.1", path = "extensions/keccak256/transpiler", default-features = false }
openvm-keccak256-guest = { version = "2.0.1", path = "extensions/keccak256/guest", default-features = false }
openvm-sha2-circuit = { version = "2.0.1", path = "extensions/sha2/circuit", default-features = false }
openvm-sha2-transpiler = { version = "2.0.1", path = "extensions/sha2/transpiler", default-features = false }
openvm-sha2-guest = { version = "2.0.1", path = "extensions/sha2/guest", default-features = false }
openvm-bigint-circuit = { version = "2.0.1", path = "extensions/bigint/circuit", default-features = false }
openvm-bigint-transpiler = { version = "2.0.1", path = "extensions/bigint/transpiler", default-features = false }
openvm-bigint-guest = { version = "2.0.1", path = "extensions/bigint/guest", default-features = false }
openvm-algebra-circuit = { version = "2.0.1", path = "extensions/algebra/circuit", default-features = false }
openvm-algebra-transpiler = { version = "2.0.1", path = "extensions/algebra/transpiler", default-features = false }
openvm-algebra-guest = { version = "2.0.1", path = "extensions/algebra/guest", default-features = false }
openvm-algebra-moduli-macros = { version = "2.0.1", path = "extensions/algebra/moduli-macros", default-features = false }
openvm-algebra-complex-macros = { version = "2.0.1", path = "extensions/algebra/complex-macros", default-features = false }
openvm-ecc-circuit = { version = "2.0.1", path = "extensions/ecc/circuit", default-features = false }
openvm-ecc-transpiler = { version = "2.0.1", path = "extensions/ecc/transpiler", default-features = false }
openvm-ecc-guest = { version = "2.0.1", path = "extensions/ecc/guest", default-features = false }
openvm-ecc-sw-macros = { version = "2.0.1", path = "extensions/ecc/sw-macros", default-features = false }
openvm-pairing-circuit = { version = "2.0.1", path = "extensions/pairing/circuit", default-features = false }
openvm-pairing-transpiler = { version = "2.0.1", path = "extensions/pairing/transpiler", default-features = false }
openvm-pairing-guest = { version = "2.0.1", path = "extensions/pairing/guest", default-features = false }
openvm-verify-stark-circuit = { version = "2.0.1", path = "guest-libs/verify-stark/circuit", default-features = false }
openvm-deferral-circuit = { version = "2.0.1", path = "extensions/deferral/circuit", default-features = false }
openvm-deferral-guest = { version = "2.0.1", path = "extensions/deferral/guest", default-features = false }
openvm-deferral-transpiler = { version = "2.0.1", path = "extensions/deferral/transpiler", default-features = false }

# Benchmarking
openvm-benchmarks-utils = { path = "benchmarks/utils", default-features = false }

# Plonky3
p3-air = { version = "=0.4.3", default-features = false }
p3-field = { version = "=0.4.3", default-features = false }
p3-baby-bear = { version = "=0.4.3", default-features = false }
p3-bn254 = { version = "=0.4.3", default-features = false }
p3-keccak-air = { version = "=0.4.3", default-features = false }
p3-matrix = { version = "=0.4.3", default-features = false }
p3-maybe-rayon = { version = "=0.4.3", default-features = false }
p3-poseidon2 = { version = "=0.4.3", default-features = false }
p3-poseidon2-air = { version = "=0.4.3", default-features = false }
p3-symmetric = { version = "=0.4.3", default-features = false }

zkhash = { package = "zkhash-axiom", version = "0.2.0" }
snark-verifier-sdk = { version = "0.2.6", git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.2.6", default-features = false, features = [
  "loader_halo2",
] }
halo2-base = { version = "0.5.4", git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.5.4", default-features = false }
halo2curves-axiom = { version = "0.7.2", git = "https://github.com/axiom-crypto/halo2curves.git", tag = "v0.7.2" }
struct-reflection = "0.1.0"

cargo_metadata = "0.18"
alloy-sol-types = "1.4.1"
tracing = "0.1.40"
bon = "3.2.0"
serde_json = "1.0.117"
serde_with = "3.11.0"
clap = "4.5.23"
toml = "0.8.14"
lazy_static = "1.5.0"
derive-new = "0.6.0"
derive_more = { version = "1.0.0", features = [
  "display",
], default-features = false }
derivative = "2.2.0"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
backtrace = "0.3.71"
metrics = "0.23.0"
cfg-if = "1.0.0"
test-case = "3.3.1"
eyre = "0.6.12"
tempfile = "3.13.0"
thiserror = "1.0.65"
rustc-hash = "2.0.0"
static_assertions = "1.1.0"
getset = "0.1.3"
rrs-lib = "0.1.0"
rand = { version = "0.9.2", default-features = false, features = [
  "std",
  "os_rng",
  "std_rng",
] }
rand_chacha = "0.3"
hex = { version = "0.4.3", default-features = false }
serde-big-array = "0.5.1"
dashmap = "6.1.0"
memmap2 = "0.9.5"
libc = "0.2.175"
libloading = "0.8"
tracing-subscriber = { version = "0.3.20", features = ["std", "env-filter"] }
tokio = "1" # >=1.0.0 to allow downstream flexibility
abi_stable = "0.11.3"
bytesize = "2.0"
zstd = { version = "0.13", default-features = false }
inferno = { version = "0.12", default-features = false }
ndarray = { version = "0.16.1", default-features = false }
num_enum = { version = "0.7.4", default-features = false }

# default-features = false for no_std for use in guest programs
itertools = { version = "0.14.0", default-features = false }
bitcode = { version = "0.6.5", default-features = false, features = ["serde"] }
serde = { version = "1.0.201", default-features = false, features = ["derive"] }
hex-literal = { version = "1.0.0", default-features = false }
bytemuck = { version = "1.20.0", default-features = false }
once_cell = { version = "1.20", default-features = false }
spin = { version = "0.10.0", default-features = false }

# cryptography, default-features = false for no_std
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
k256 = { version = "0.13.4", default-features = false }
elliptic-curve = { version = "0.13.8", default-features = false }
ecdsa-core = { version = "0.16.9", package = "ecdsa", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
ff = { version = "0.13.1", default-features = false }
sha2 = { version = "0.10", default-features = false }
blstrs = { version = "0.7.1", default-features = true }

[workspace.metadata.cargo-shear]
ignored = ["cargo-openvm"]
