[package]
name = "benchmark"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
cli-table = "0.4.9"
csv = "1.3.0"
afs = { path = "../bin/afs" }
afs-stark-backend = { path = "../stark-backend" }
afs-derive = { path = "../derive" }
afs-test-utils = { path = "../test-utils" }
serde = { version = "1.0.203", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
rand = "0.8.5"
