[package]
name = "axvm-benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axvm-circuit = { workspace = true }
axvm-transpiler.workspace = true
axvm-build.workspace = true
axvm-native-compiler.workspace = true
axvm-recursion = { workspace = true, features = ["test-utils"] }
ax-stark-sdk.workspace = true
p3-field.workspace = true
eyre.workspace = true
tempfile.workspace = true
metrics.workspace = true
tracing.workspace = true
revm-interpreter = { version = "13.0.0", optional = true }

[dev-dependencies]

[features]
default = ["parallel", "mimalloc", "bench-metrics"]
bench-metrics = ["axvm-recursion/bench-metrics"]
aggregation = []
static-verifier = ["axvm-recursion/static-verifier"]
parallel = ["axvm-recursion/parallel"]
mimalloc = ["axvm-circuit/mimalloc"]
jemalloc = ["axvm-circuit/jemalloc"]
jemalloc-prof = ["axvm-circuit/jemalloc-prof"]
revm = ["dep:revm-interpreter"]
