[package]
name = "afs-datafusion-interface"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
color-eyre = "0.6.3"
datafusion = { version = "40.0.0", features = ["serde"] }
tokio = "1.39.2"
afs-page = { path = "../db/page" }
afs-stark-backend = { path = "../stark-backend" }
afs-test-utils = { path = "../test-utils" }
async-trait = "0.1.81"
p3-field = { workspace = true }
bincode = "1.3.3"
protobuf = "3.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
futures = "0.3.30"
