[package]
name = "gunadi_dev"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
p3-baby-bear = { workspace = true }
openvm-instructions = { workspace = true }
openvm-circuit = { workspace = true }
openvm-rv32im-transpiler = { workspace = true }
openvm-rv32im-circuit = { workspace = true }
openvm-stark-backend = { workspace = true }
openvm-benchmarks-execute = { workspace = true }
openvm-benchmarks-utils = { workspace = true }
openvm-platform = { workspace = true }
openvm-stark-sdk = { workspace = true }
strum = { workspace = true }
memmap2 = "0.9"
libloading = "0.8"