[package]
name = "logical-interface"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "User-facing logical interface for AFS."

[dependencies]
alloy-primitives = "0.7.5"
color-eyre = "0.6.3"
hex = "0.4.3"
primitive-types = "0.12.2"
serde = "1.0.203"
serde_derive = "1.0.203"
