[package]
name = "tracegen-gpu"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
cuda-runtime-sys = { workspace = true }
rand = { version = "0.8.5", default-features = false }
tracing = { workspace = true }
derive-new = { workspace = true }

# stark-backend
stark-backend-gpu = { workspace = true }
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true }
halo2curves-axiom = { workspace = true }
num-traits = { workspace = true }

# openvm
openvm-circuit = { workspace = true }
openvm-circuit-primitives = { workspace = true }
openvm-instructions = { workspace = true }
openvm-rv32im-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }
openvm-native-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }
openvm-native-compiler = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }
openvm-rv32-adapters = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }
openvm-rv32im-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }
openvm-rv32im-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }
openvm-algebra-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }
openvm-algebra-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }
openvm-mod-circuit-builder = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }
openvm-ecc-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }
openvm-ecc-transpiler = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }
openvm-keccak256-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }
openvm-bigint-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }
# p3
p3-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-keccak-air = { workspace = true }

openvm-poseidon2-air = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", default-features = false }

num-bigint = "0.4"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] } # For CUDA compilation

[dev-dependencies]
test-case = { workspace = true }
itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
openvm-instructions = { workspace = true }
openvm-circuit = { workspace = true, features = ["test-utils"] }
openvm-rv32im-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", features = ["test-utils"] }
openvm-rv32-adapters = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", features = ["test-utils"] }
openvm-mod-circuit-builder = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/new-exec-device", features = ["test-utils"] }
openvm-keccak256-transpiler = { workspace = true }

[features]
default = ["test-utils"]
test-utils = ["openvm-circuit/test-utils"]
