[package]
name = "transpiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-keccak-air = { workspace = true }
p3-commit = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-util = { workspace = true }
p3-uni-stark = { workspace = true }

poseidon2-air = { path = "../poseidon2-air", default-features = false }
afs-compiler = { path = "../compiler", default-features = false }
afs-primitives = { path = "../primitives", default-features = false }
afs-stark-backend = { path = "../stark-backend", default-features = false }
afs-derive = { path = "../derive" }
ax-sdk = { path = "../sdk", default-features = false, optional = true }
stark-vm = { path = "../vm" }

color-eyre = "0.6.3"
elf = "0.7.4"
rrs-lib = "0.1.0"
