[package]
name = "openvm-benchmarks-execute"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
openvm-benchmarks-utils.workspace = true
openvm-circuit.workspace = true
openvm-stark-sdk.workspace = true
openvm-transpiler.workspace = true
openvm-algebra-circuit.workspace = true
openvm-algebra-transpiler.workspace = true
openvm-bigint-circuit.workspace = true
openvm-bigint-transpiler.workspace = true
openvm-ecc-circuit.workspace = true
openvm-ecc-transpiler.workspace = true
openvm-pairing-circuit.workspace = true
openvm-pairing-guest.workspace = true
openvm-pairing-transpiler.workspace = true
openvm-keccak256-circuit.workspace = true
openvm-keccak256-transpiler.workspace = true
openvm-rv32im-circuit.workspace = true
openvm-rv32im-transpiler.workspace = true
openvm-sha2-circuit.workspace = true
openvm-sha2-transpiler.workspace = true

clap.workspace = true
eyre.workspace = true
derive_more = { workspace = true, features = ["from"] }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
bitcode.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
openvm-circuit = { workspace = true, features = ["test-utils"] }
divan = { package = "codspeed-divan-compat", version = "3.0.2" }

[features]
default = ["jemalloc"]
tco = [
    "openvm-circuit/tco",
    "openvm-algebra-circuit/tco",
    "openvm-bigint-circuit/tco",
    "openvm-ecc-circuit/tco",
    "openvm-keccak256-circuit/tco",
    "openvm-pairing-circuit/tco",
    "openvm-rv32im-circuit/tco",
    "openvm-sha2-circuit/tco",
]
aot = [
    "openvm-circuit/aot",
    "openvm-algebra-circuit/aot",
    "openvm-bigint-circuit/aot",
    "openvm-ecc-circuit/aot",
    "openvm-keccak256-circuit/aot",
    "openvm-pairing-circuit/aot",
    "openvm-rv32im-circuit/aot",
    "openvm-sha2-circuit/aot",
]
mimalloc = ["openvm-circuit/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc"]
jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
perf-metrics = [
    "openvm-circuit/perf-metrics",
    "openvm-transpiler/function-span",
]

[[bench]]
name = "execute"
harness = false

[package.metadata.cargo-shear]
ignored = ["derive_more", "rand"]
