[package]
name = "openvm-benchmarks-execute"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rvr-openvm-lift = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["from"] }
rand.workspace = true

[dev-dependencies]
openvm-circuit = { workspace = true, features = ["test-utils"] }
divan = { package = "codspeed-divan-compat", version = "3.0.2" }
eyre.workspace = true
openvm-algebra-circuit.workspace = true
openvm-algebra-transpiler.workspace = true
openvm-benchmarks-utils.workspace = true
openvm-bigint-circuit.workspace = true
openvm-bigint-transpiler.workspace = true
openvm-ecc-circuit.workspace = true
openvm-ecc-transpiler.workspace = true
openvm-keccak256-circuit.workspace = true
openvm-keccak256-transpiler.workspace = true
openvm-pairing-circuit.workspace = true
openvm-pairing-guest.workspace = true
openvm-pairing-transpiler.workspace = true
openvm-riscv-circuit.workspace = true
openvm-riscv-transpiler.workspace = true
openvm-sha2-circuit.workspace = true
openvm-sha2-transpiler.workspace = true
openvm-stark-sdk.workspace = true
openvm-transpiler.workspace = true
serde = { workspace = true, features = ["derive"] }

[features]
default = ["jemalloc"]
tco = [
    "openvm-circuit/tco",
    "openvm-algebra-circuit/tco",
    "openvm-bigint-circuit/tco",
    "openvm-ecc-circuit/tco",
    "openvm-keccak256-circuit/tco",
    "openvm-pairing-circuit/tco",
    "openvm-riscv-circuit/tco",
    "openvm-sha2-circuit/tco",
]
rvr = [
    "dep:rvr-openvm-lift",
    "openvm-circuit/rvr",
    "openvm-algebra-circuit/rvr",
    "openvm-bigint-circuit/rvr",
    "openvm-ecc-circuit/rvr",
    "openvm-keccak256-circuit/rvr",
    "openvm-pairing-circuit/rvr",
    "openvm-riscv-circuit/rvr",
    "openvm-sha2-circuit/rvr",
]
mimalloc = ["openvm-circuit/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc"]
jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
perf-metrics = [
    "openvm-circuit/perf-metrics",
    "openvm-transpiler/function-span",
]

[[bench]]
name = "execute"
harness = false

[package.metadata.cargo-shear]
ignored = ["derive_more", "rand", "rvr-openvm-lift"]
