[package]
name = "openvm-benchmarks-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
openvm-build.workspace = true
openvm-circuit.workspace = true
openvm-sdk.workspace = true
openvm-stark-backend.workspace = true
openvm-stark-sdk.workspace = true
openvm-transpiler.workspace = true
openvm-native-circuit.workspace = true
openvm-native-compiler.workspace = true

cargo_metadata.workspace = true
clap = { version = "4.5.9", features = ["derive", "env"] }
eyre.workspace = true
tempfile.workspace = true
tracing.workspace = true
derive_more = { workspace = true, features = ["from"] }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }

[dev-dependencies]

[features]
default = ["mimalloc"]
profiling = ["openvm-sdk/profiling"]
aggregation = []
mimalloc = ["openvm-circuit/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc"]
jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
nightly-features = ["openvm-circuit/nightly-features"]
build-binaries = []

[[bin]]
name = "build-elfs"
path = "src/build-elfs.rs"
required-features = ["build-binaries"]

[package.metadata.cargo-shear]
ignored = ["derive_more"]
