[package]
name = "cargo-openvm"
description = "OpenVM CLI tools"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
    "build",
    "git",
    "git2",
] }

[dependencies]
openvm-build = { workspace = true }
openvm-transpiler = { workspace = true }
openvm-sdk = { workspace = true, features = ["root-prover"] }
openvm-stark-sdk.workspace = true
openvm-stark-backend.workspace = true
openvm-circuit = { workspace = true }
openvm-continuations = { workspace = true, features = ["root-prover"] }
openvm-sdk-config = { workspace = true }

aws-sdk-s3 = { version = "1.123.0", default-features = false, features = ["default-https-client", "rt-tokio", "sigv4a"] }
aws-config = { version = "1.8.14", default-features = false, features = ["default-https-client", "rt-tokio"] }
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
hex = "0.4.3"
target-lexicon = "0.12.15"
toml = { workspace = true }
itertools.workspace = true
toml_edit = "0.22"
include_dir = "0.7"

# TODO: Remove these after bumping the Rust MSRV to 1.94.1.
aws-credential-types = { version = "=1.2.14", default-features = false }
aws-runtime = { version = "=1.7.5", default-features = false }
aws-sdk-sts = { version = "=1.98.0", default-features = false }
aws-sigv4 = { version = "=1.4.5", default-features = false }
aws-smithy-async = { version = "=1.2.14", default-features = false }
aws-smithy-eventstream = { version = "=0.60.21", default-features = false }
aws-smithy-http = { version = "=0.63.6", default-features = false }
aws-smithy-http-client = { version = "=1.1.13", default-features = false }
aws-smithy-json = { version = "=0.62.5", default-features = false }
aws-smithy-observability = { version = "=0.2.6", default-features = false }
aws-smithy-query = { version = "=0.60.15", default-features = false }
aws-smithy-runtime = { version = "=1.11.3", default-features = false }
aws-smithy-runtime-api = { version = "=1.12.3", default-features = false }
aws-smithy-runtime-api-macros = { version = "=1.0.0", default-features = false }
aws-smithy-schema = { version = "=0.1.0", default-features = false }
aws-smithy-types = { version = "=1.5.0", default-features = false }
aws-smithy-xml = { version = "=0.60.15", default-features = false }
aws-types = { version = "=1.3.16", default-features = false }

[package.metadata.cargo-shear]
ignored = [
    "aws-credential-types",
    "aws-runtime",
    "aws-sdk-sts",
    "aws-sigv4",
    "aws-smithy-async",
    "aws-smithy-eventstream",
    "aws-smithy-http",
    "aws-smithy-http-client",
    "aws-smithy-json",
    "aws-smithy-observability",
    "aws-smithy-query",
    "aws-smithy-runtime",
    "aws-smithy-runtime-api",
    "aws-smithy-runtime-api-macros",
    "aws-smithy-schema",
    "aws-smithy-types",
    "aws-smithy-xml",
    "aws-types",
]

[features]
default = ["parallel", "jemalloc", "evm-verify", "metrics"]
evm-prove = ["openvm-sdk/evm-prove"]
evm-verify = ["evm-prove", "openvm-sdk/evm-verify"]
metrics = ["openvm-sdk/metrics"]
tco = ["openvm-sdk/tco"]
aot = ["openvm-sdk/aot"]
unprotected = ["openvm-sdk/unprotected"]
# for guest profiling:
perf-metrics = ["openvm-sdk/perf-metrics", "metrics"]
# performance features:
# (rayon is always imported because of halo2, so "parallel" feature is redundant)
parallel = ["openvm-sdk/parallel"]
mimalloc = ["openvm-sdk/mimalloc"]
jemalloc = ["openvm-sdk/jemalloc"]
jemalloc-prof = ["openvm-sdk/jemalloc-prof"]
cuda = ["openvm-sdk/cuda"]
halo2-gpu = ["cuda", "openvm-sdk/halo2-gpu"]
ci = []

[dev-dependencies]
tempfile = "3.10.1"
