[package]
name = "continuations-v2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Continuation AIRs and utilities for v2"

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
stark-backend-v2 = { workspace = true }
recursion-circuit = { workspace = true }
stark-recursion-circuit-derive = { workspace = true }
verify-stark = { workspace = true }
openvm-stark-backend = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-circuit-primitives = { workspace = true }
openvm-circuit = { workspace = true }
openvm-poseidon2-air = { workspace = true }

itertools.workspace = true
tracing.workspace = true
eyre.workspace = true
derive-new.workspace = true
cfg-if.workspace = true

openvm-cuda-common = { workspace = true, optional = true }
openvm-cuda-backend = { workspace = true, optional = true }
cuda-backend-v2 = { workspace = true, optional = true }

[dev-dependencies]
stark-backend-v2 = { workspace = true, features = ["test-utils"] }
openvm-rv32im-circuit = { workspace = true, features = ["test-utils"] }
openvm-rv32im-transpiler = { workspace = true }
openvm-toolchain-tests = { workspace = true }
openvm-transpiler = { workspace = true }
test-case = { workspace = true }

[build-dependencies]
openvm-cuda-builder = { workspace = true, optional = true }

[features]
default = ["parallel"]
parallel = ["stark-backend-v2/parallel", "recursion-circuit/parallel"]

cuda = [
    "dep:openvm-cuda-builder",
    "dep:openvm-cuda-common",
    "dep:openvm-cuda-backend",
    "dep:cuda-backend-v2",
    "openvm-circuit-primitives/cuda",
    "openvm-circuit/cuda",
    "openvm-rv32im-circuit/cuda",
    "recursion-circuit/cuda",
]
touchemall = [
    "cuda",
    "openvm-cuda-common/touchemall",
    "openvm-cuda-backend/touchemall",
    "openvm-circuit/touchemall",
]
